Pods.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-webserver
  labels:
    app: nginx
    tier: front-end
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: httpd-webserver
  labels:
    app: httpd
    tier: front-end
spec:
  containers:
  - name: httpd
    image: httpd
    ports:
      - containerPort: 80
