Deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployments
  annotations:
    kubernetes.io/change-cause: nginx-v1.2
spec:
  minReadySeconds: 2
  progressDeadlineSeconds: 30
  strategy:
    rollingUpdate:
      maxSurge: 75%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: nginx
  replicas: 2
  template: # template for the pods
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP  # NodePort
  selector:
    app: nginx
  ports:
    - name: nginx
      port: 80
      targetPort: 80
      #inodePort: 32000
      protocol: TCP
