clusterIP.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    tier: front-end
    app: nginx
  ports:
    - name: nginx
      port: 80
      targetPort: 80
      protocol: TCP
