networks_connection_cluster_IP.yaml
#---
#apiVersion: v1
#kind: Pod
#metadata:
#  name: nginx-webserver
#  labels:
#    app: nginx
#    tier: front-end
#  namespace: jino
#spec:
#  containers:
#  - name: nginx
#    image: httpd
#    ports:
#      - containerPort: 80


---
apiVersion: v1
kind: Pod
metadata:
  name: test
  labels:
    app: test
spec:
  containers:
   - name: test
     image: mysql:5
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  containers:
   - name: mysql
     image: mysql:5
---
kind: Service
apiVersion: v1
metadata:
  name: database
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
  type: ClusterIP
