nodePort.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    tier: front-end
    app: nginx
  ports:
    - name: nginx
      port: 80
      targetPort: 80
      nodePort: 32000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:
  type: NodePort
  selector:
    tier: front-end
    app: httpd
  ports:
    - name: nginx
      port: 80
      targetPort: 80
      nodePort: 32001
      protocol: TCP
