replicas.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - name: nginx
      port: 80
      targetPort: 80
      nodePort: 32000
      protocol: TCP
