single_pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-webserver
  labels:
    app: nginx
    tier: front-end
spec:
  containers:
  - name: nginx
    image: httpd
    ports:
      - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP # NodePort
  selector:
    tier: front-end
    app: nginx
  ports:
    - name: nginx
      port: 80
      targetPort: 80
      #nodePort: 32000
      protocol: TCP

      #apiVersion: networking.k8s.io/v1beta1
      #kind: Ingress
      #metadata:
      #  name: test
      ##  annotations:
      ##    nginx.ingress.kubernetes.io/rewrite-target: /
      #spec:
      #  rules:
      #  - host: jino.com
      #    http:
      #      paths:
      #      - path: /
      #        backend:
      #          serviceName: nginx-service
      #          servicePort: 80
