ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jino.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
